# opentrack

./: CONTRIBUTIONS_LICENSE  README.md  build_instructions.txt
logic/: main-settings.hpp
migration/: 20180428_00-module-names.cpp
opentrack/: defs.hpp
proto-ft/: CMakeLists.txt  ftnoir_protocol_ft.cpp  ftnoir_protocol_ft.h
tracker-clearsight/: CMakeLists.txt  clearsight.cpp  clearsight.h  clearsight.qrc  clearsight.ui
tracker-clearsight/lang/: nl_NL.ts  ru_RU.ts  stub.ts  zh_CN.ts
